--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ you a more impactful experience on every level.
                 <div class="footer__contact">
                     <img src="./images/footer-images/Shape.png" alt="facebook">
                     <img src="./images/footer-images/Path.png" alt="tweeter">
-                    <img src="./images/footer-images/Path (1).png" alt="instagramm">
+                    <img src="./images/footer-images/Path (1).png" alt="instagram">
                 </div>
             </div>
         </div>
